<resources>
    <string name="app_name">ПО "Имедис-Эксперт"</string>
    <string name="data">Группы воздействий</string>
    <string name="connect_button">Подключиться</string>
    <string name="refresh_button">Обновить</string>

    <string name="waiting">Ожидание устройства…</string>
    <string name="device_found">Устройство обнаружено:\n%1$s</string>
    <string name="device_not_found">Устройство не обнаружено</string>
    <string name="device_not_found_content">Не доступны</string>
    <string name="device_found_chars">Показать свойства устройства</string>
    <string name="device_found_content">Имя производителя %1$s\nID устройства %2$d\nID продукта %3$d\nVendor ID
        устройства %4$d\nВерсия %5$s\nСерийный номер %6$s\nПротокол %7$d\nКласс %8$d\nПодкласс %9$d\nКоличество
        интерфейсов %10$d\n
    </string>
    <string name="send_button">Отправить группы в аппарат</string>
    <string name="receive_button">Получить группы из аппарата</string>
    <string name="cancel_button">Отменить</string>
    <string name="reset_button">Сбросить аппарат</string>
    <string name="continue_button">Продолжить</string>

    <string name="group_title">Группа № %1$d: %2$s</string>
    <string name="switch_list">Режим отображения</string>
    <string name="switch_list_off">Код</string>
    <string name="switch_list_on">Название</string>

    <string name="tab1">Название</string>
    <string name="tab1_label">Название группы</string>
    <string name="tab2">Список</string>
    <string name="tab2_label">Список воздействий</string>
    <string name="tab3">Добавить</string>
    <string name="tab3_label">Новое воздействие</string>

    <string name="group_name_text">Название группы № %1$d</string>
    <string name="group_time_text">Время выполнения группы: %1$s</string>
    <string name="add_button">Добавить группу</string>
    <string name="refresh_groups_button">Обновить группы</string>
    <string name="clean_button">Очистить группы</string>
    <string name="save_button">Сохранить группы в файл</string>
    <string name="save_new_ept_button">Добавить</string>
    <string name="group_list_button">К списку групп</string>
    <string name="open_button">Открыть группы из файла</string>

    <string name="col_num">№</string>
    <string name="col_val">Код</string>
    <string name="col_ampl">Ампл.</string>
    <string name="col_time">Время</string>

    <string name="save_groups_button">Сохранить воздействия</string>
    <string name="save_group_button">Сохранить группу</string>
    <string name="save_name_button">Сохранить название</string>
    <string name="delete_button">Удалить</string>
    <string name="delete_ept_button">Удалить группу</string>
    <string name="add_ept_button">Добавить воздействие</string>
    <string name="settings_button">Настройки</string>
    <string name="settings_ept_button">Настройки группы</string>
    <string name="name_hint">Введите название группы</string>
    <string name="time_hint">Введите общее время группы</string>
    <string name="ept_title">Список воздействий</string>
    <string name="group">Группа: %1$s</string>
    <string name="new_group">Новая группа</string>
    <string name="group_settings">Настройки группы: %1$s</string>
    <string name="new_group_settings">Настройки новой группы</string>
    <string name="ept_settings">Настройки воздействия: %1$s</string>
    <string name="new_ept_settings">Настройки нового воздействия</string>

    <string name="mode_text">Режим исполнения группы</string>
    <string name="mode_serial">Последовательное исполнение</string>
    <string name="mode_cycle">Циклическое исполнение</string>
    <string name="mode_complex">Комплексное исполнение</string>
    <string name="spectre_text">Расширение спектра программ</string>
    <string name="spectre_en1">Включить 1</string>
    <string name="spectre_en2">Включить 2</string>
    <string name="spectre_dis">Выключить</string>
    <string name="freq_text">Ограничение частоты, Гц</string>
    <string name="freq_1100">1100 Гц</string>
    <string name="freq_1200">1200 Гц</string>
    <string name="freq_1500">1500 Гц</string>
    <string name="freq_15000">15000 Гц</string>

    <string name="ampl_hint">Введите амплитуду</string>
    <string name="step_time_hint">Введите время шага 0–5999</string>
    <string name="code_hint">Выберите код из справочника</string>
    <string name="type_text">Тип записи</string>
    <string name="codes">Справочник</string>
    <string name="search_text">Введите название или код</string>
    <string name="ampl">Амплитуда</string>
    <string name="step">Время шага</string>
    <string name="received">Группы получены! Обновите группы</string>


    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>


    <string name="previous">Previous</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_group_data">GroupDataActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>