<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:layout_margin="5dp"
        tools:context=".GroupSettingsFragment">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/scroll1"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/grid2">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linear1"
                android:orientation="vertical">

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:ems="10"
                    android:layout_marginBottom="10dp"
                    android:textSize="18sp"
                    android:id="@+id/text_title"
                    android:maxLength="15"
                    android:hint="@string/name_hint"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:layout_marginBottom="10dp"
                    android:textSize="18sp"
                    android:id="@+id/text_time"
                    android:maxLength="5"
                    android:hint="@string/time_hint"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:id="@+id/text_mode"
                    android:text ="@string/mode_text"/>

            <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/mode">
                <RadioButton
                        android:id="@+id/mode_serial"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_weight="1"
                        android:text ="@string/mode_serial"/>

                <RadioButton
                        android:id="@+id/mode_cycle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_weight="1"
                        android:text ="@string/mode_cycle"/>

                <RadioButton
                        android:id="@+id/mode_complex"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_weight="1"
                        android:text ="@string/mode_complex"/>
            </RadioGroup>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:id="@+id/text_spectre"
                    android:text ="@string/spectre_text"/>

            <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/spectre">
                <RadioButton
                        android:id="@+id/spectre_enable1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_weight="1"
                        android:text ="@string/spectre_en1"/>

                <RadioButton
                        android:id="@+id/spectre_enable2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_weight="1"
                        android:text ="@string/spectre_en2"/>

                <RadioButton
                        android:id="@+id/spectre_disable"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_weight="1"
                        android:text ="@string/spectre_dis"/>
            </RadioGroup>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:id="@+id/text_freq"
                    android:text ="@string/freq_text"/>

            <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/freq">
                <RadioButton
                        android:id="@+id/freq_1100"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_weight="1"
                        android:text ="@string/freq_1100"/>

                <RadioButton
                        android:id="@+id/freq_1200"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_weight="1"
                        android:text ="@string/freq_1200"/>

                <RadioButton
                        android:id="@+id/freq_1500"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_weight="1"
                        android:text ="@string/freq_1500"/>
                <RadioButton
                        android:id="@+id/freq_15000"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_weight="1"
                        android:text ="@string/freq_15000"/>
            </RadioGroup>
        </LinearLayout>
    </ScrollView>

    <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:id="@+id/grid2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scroll1"
            app:layout_constraintBottom_toBottomOf="parent">

        <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/cancel_settings"
                android:text="@string/cancel_button"
                android:layout_column="0"
                android:layout_marginEnd="5dp"
                android:layout_gravity="center|fill"
                android:layout_columnWeight="1"
                android:background="@drawable/button_background"/>
        <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/save_settings"
                android:text="@string/save_button"
                android:layout_column="1"
                android:layout_marginStart="5dp"
                android:layout_gravity="center|fill"
                android:layout_columnWeight="1"
                android:background="@drawable/button_background"/>
    </GridLayout>
</android.support.constraint.ConstraintLayout>