<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <item
                android:id="@+id/action_save"
                android:orderInCategory="1"
                android:title="@string/save_button" />
        <item
                android:id="@+id/action_clean"
                android:orderInCategory="3"
                android:title="@string/clean_button" />
        <item
                android:id="@+id/action_open"
                android:orderInCategory="2"
                android:title="@string/open_button" />
<!--    <item-->
<!--            android:id="@+id/action_add"-->
<!--            android:orderInCategory="1"-->
<!--            android:title="@string/add_button" />-->
<!--    <item-->
<!--            android:id="@+id/action_cancel"-->
<!--            android:orderInCategory="2"-->
<!--            android:title="@string/cancel_button" />-->

<!--    <item-->
<!--            android:id="@+id/action_refresh"-->
<!--            android:orderInCategory="3"-->
<!--            android:title="@string/refresh_groups_button" />-->

</menu>