<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fragment_group_ept"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        tools:context=".GroupEptFragment">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="top"
            android:textSize="20sp"
            android:layout_marginTop="25dp"
            android:id="@+id/text_code"
            android:hint="@string/code_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="top"
            android:textSize="20sp"
            android:layout_marginTop="25dp"
            android:textColor="@color/black"
            android:id="@+id/label_ampl"
            android:text="@string/ampl"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_code"/>


    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:gravity="top"
            android:id="@+id/text_ampl"
            android:hint="@string/ampl_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_ampl"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="top"
            android:textSize="20sp"
            android:layout_marginTop="25dp"
            android:textColor="@color/black"
            android:id="@+id/label_time"
            android:text="@string/step"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_ampl"/>


    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:gravity="top"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:id="@+id/text_step_time"
            android:hint="@string/step_time_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_time"/>


    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/save_code_settings"
            android:text="@string/save_new_ept_button"
            android:layout_column="1"
            android:layout_margin="8dp"
            android:layout_gravity="center|fill"
            android:layout_columnWeight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/button_background"/>



</androidx.constraintlayout.widget.ConstraintLayout>