<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:padding="8dp"
        android:id="@+id/fragment_group_name"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".GroupNameFragment">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linear1"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/group_name_text"
                android:id="@+id/group_number"
                android:textColor="@color/black"
                android:textSize="18sp"
        />

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:layout_marginBottom="10dp"
                android:textSize="18sp"
                android:id="@+id/text_title"
                android:maxLength="15"
                android:hint="@string/name_hint"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/group_time_text"
                android:id="@+id/group_time"
                android:textColor="@color/black"
                android:textSize="18sp"
        />



    </LinearLayout>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/continue_button"
            android:text="@string/save_name_button"
            android:layout_margin="15dp"
            android:layout_gravity="center|fill"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/button_background"/>

</android.support.constraint.ConstraintLayout>