<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="2"
            android:layoutMode="clipBounds"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:padding="10dp">
        <TextView
                android:id="@+id/device"
                android:text="@string/waiting"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:layout_columnSpan="2"
                android:layout_gravity="fill"/>
        <TextView
                android:id="@+id/title"
                android:text="@string/device_found_chars"
                android:textSize="20sp"
                android:layout_columnSpan="2"
                android:layout_gravity="fill"
                android:layout_marginTop="10dp"/>



<!--        <ScrollView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="10dp"-->
<!--                android:layout_columnSpan="2"-->
<!--                android:fillViewport="true"-->
<!--                android:scrollbars="vertical"-->

<!--                android:layout_gravity="bottom"-->
<!--        >-->

<!--            -->

<!--        </ScrollView>-->

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/content"
                android:textSize="18sp"
                android:scrollbars="vertical"
                android:layout_columnSpan="2"
                android:maxLines="10"
        />

        <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/connect"
                android:text="@string/connect_button"
                android:layout_column="0"
                android:layout_gravity="bottom"
                android:layout_columnWeight="1"
                android:background="@drawable/button_background"/>
        <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/refresh"
                android:text="@string/refresh_button"
                android:layout_column="1"
                android:layout_gravity="bottom"
                android:layout_columnWeight="1"
                android:background="@drawable/button_background"/>
    </GridLayout>

</android.support.constraint.ConstraintLayout>




